Fixed alignment for teams page

--- a/ngWatchParty/src/app/components/teams/teams.component.css
+++ b/ngWatchParty/src/app/components/teams/teams.component.css
@@ -7,3 +7,7 @@
   text-align: center;
   text-decoration: underline;
 }
+
+h1 {
+  text-align: center;
+}
